# stm32l4_demo

./: .mxproject  CMakeLists.txt  Makefile  README.md  STM32L431RCTx_FLASH.ld  clearup.bat  stm32l4_demo.ioc  toolchains.cmake
Core/Inc/: common.h  device.h  main.h  power.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tasks.h
Core/Src/: common.c  device.c  iwdg.c  main.c  power.c  rtc.c  stm32l4xx_it.c  tasks.c  update.c
Mylibs/RING_FIFO/inc/: ring_fifo.h
emStudio/: STM32L431RCTx_MemoryMap.xml  demo.emProject  demo.emSession
uart_iap/: crc.py  mySerial.py  uart_iap.py
